@@ -12,25 +12,27 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
+        
         <activity
             android:label="@string/app_name"
             android:name="com.donn.homewatcher.HomeWatcherActivity" 
             android:windowSoftInputMode="stateHidden"
             android:theme="@style/Theme.Sherlock">
-            
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
     	 </activity>
     	 
-        <activity android:name=".Preferences" android:label="@string/app_name">
-            <intent-filter>
-                
-            </intent-filter>
-        </activity>
+        <activity android:name=".Preferences" android:label="@string/app_name"/>
     
+        <receiver android:name="VPNListener">
+            <intent-filter>
+                <action android:name="com.donn.rootvpn.CONNECTED" />
+                <action android:name="com.donn.rootvpn.DISCONNECTED" />
+            </intent-filter>
+        </receiver>
+        
     </application>
 
 </manifest>
